ErrorProne low hanging issues #7556